Actualizacion proyecto - Implementacion de diseños, ajuste de etiqueta y selector de acuerdo a metodologia BEM - Merge con origin/main

--- a/index.html
+++ b/index.html
@@ -61,67 +61,69 @@
             nos alegra que seas nuestro vecino.
           </p>
         </section>
-        <div class="photo-grid">
-          <img
-            src="./images/Image_1.png"
-            alt="imagen_1"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_2.png"
-            alt="imagen_2"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_3.png"
-            alt="imagen_3"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_4.png"
-            alt="imagen_4"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_5.png"
-            alt="imagen_5"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_6.png"
-            alt="imagen_6"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_7.png"
-            alt="imagen_7"
-            class="photo-grid__image"
-          />
-          <img
-            src="./images/Image_8.png"
-            alt="imagen_8"
-            class="photo-grid__image"
-          />
-        </div>
+        <section class="places" id="places" aria-label="Galery places">
+          <div class="photo-grid">
+            <img
+              src="./images/Image_1.png"
+              alt="imagen_1 - Ciudad costera"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_2.png"
+              alt="imagen_2 - Cidad de Cricieth"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_3.png"
+              alt="imagen_3 - Capilla"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_4.png"
+              alt="imagen_4 - Rio con una ciudad de fondo"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_5.png"
+              alt="imagen_5 - Zona campestre"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_6.png"
+              alt="imagen_6 - Estacionamiento"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_7.png"
+              alt="imagen_7 - Casa indigena"
+              class="photo-grid__image"
+            />
+            <img
+              src="./images/Image_8.png"
+              alt="imagen_8 - Casas en zona montañosa"
+              class="photo-grid__image"
+            />
+          </div>
+        </section>
         <section class="places">
-          <div class="place__content">
-            <h2 class="place__title">Cricieth, Gales</h2>
-            <div class="place__website">
-              <p class="place__url-heading">Artistas</p>
-              <p class="place__artist">Steffan Warren, editor jefe</p>
-              <p class="place__artist">
+          <div class="places__content">
+            <h2 class="places__title">Cricieth, Gales</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artistas</p>
+              <p class="places__artist">Steffan Warren, editor jefe</p>
+              <p class="places__artist">
                 Kseniya Glagoleva, gerente de proyectos
               </p>
             </div>
-            <div class="place__images">
+            <div class="places__images">
               <img
                 src="./images/image_9.png"
                 alt="imagen del Cricieth en Gales"
                 class="place__image-9"
               />
             </div>
-            <div class="place__paragraphs">
-              <p class="place__paragraph">
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
                 Las ruinas medievales del castillo de Cricieth dominan la ciudad
                 desde una roca que extiende sobre el mar. Se cree que fue
                 construido por Llewelyn el Grande en el S. XIII. 800 años
@@ -129,7 +131,7 @@
                 Snowdonia, se ha convertido en un popular destino turístico
                 durante los meses de verano.
               </p>
-              <p class="place__paragraph">
+              <p class="places__paragraph">
                 A pocos pasos de camino al castillo, puedes disfrutar de los
                 mejores helados del mundo en Cadwalader's, cuyo ingrediente
                 secreto se rumorea que son algas marinas de la localidad. Otra
@@ -140,25 +142,25 @@
                 Primer Ministro del Reino Unido.
               </p>
             </div>
-            <button class="place__button" type="button">
+            <button class="places__button" type="button">
               Compra esta obra como NFT
             </button>
           </div>
-          <div class="place__content">
-            <h2 class="place__title">Berea, EE. UU.</h2>
-            <div class="place__website">
-              <p class="place__url-heading">Artista</p>
-              <p class="place__artist">Travis Turner, autor y editor</p>
+          <div class="places__content">
+            <h2 class="places__title">Berea, EE. UU.</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artista</p>
+              <p class="places__artist">Travis Turner, autor y editor</p>
             </div>
-            <div class="place__images">
+            <div class="places__images">
               <img
                 src="./images/image_10.png"
                 alt="imagen de Berea, EE. UU."
                 class="place__image-10"
               />
             </div>
-            <div class="place__paragraphs">
-              <p class="place__paragraph">
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
                 Berea es una pequeña ciudad ubicada en la parte central de
                 Kentucky. La ciudad está rodeada por hermosos bosques y campos.
                 Es conocida como la capital de la artesanía del estado, y sus
@@ -169,7 +171,7 @@
                 local hecho de pan de maíz y que se sirve con una cuchara de
                 madera.
               </p>
-              <p class="place__paragraph">
+              <p class="places__paragraph">
                 Aunque, probablemente es mejor conocida por su universidad. El
                 Berea College fue fundado en 1855 y fue la primera universidad
                 sureña integrada racialmente, así como la primera en ser
@@ -177,26 +179,26 @@
                 no cobra colegiatura: cada estudiante recibe una beca del 100%.
               </p>
             </div>
-            <button class="place__button" type="button">
+            <button class="places__button" type="button">
               Compra esta obra como NFT
             </button>
           </div>
 
-          <div class="place__content">
-            <h2 class="place__title">Muramvya, Burundi</h2>
-            <div class="place__website">
-              <p class="place__url-heading">Artista</p>
-              <p class="place__artist">Grevisse Kenguruka, editor técnico</p>
+          <div class="places__content">
+            <h2 class="places__title">Muramvya, Burundi</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artista</p>
+              <p class="places__artist">Grevisse Kenguruka, editor técnico</p>
             </div>
-            <div class="place__images">
+            <div class="places__images">
               <img
                 src="./images/image_11.png"
                 alt="imagen de Muramvya, Burundi"
                 class="place__image-11"
               />
             </div>
-            <div class="place__paragraphs">
-              <p class="place__paragraph">
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
                 Muramvya es una de las 18 provincias de Burundi. Durante la
                 época del reino, Muramvya fue su capital; y en 2017, gracias a
                 su paisaje cultural y natural, se añadió a la Lista provisional
@@ -204,7 +206,7 @@
                 centro de Burundi, entre las capitales política y económica del
                 país.
               </p>
-              <p class="place__paragraph">
+              <p class="places__paragraph">
                 Su clima es más bien frío durante la noche, pero durante el día,
                 podrías pensar que estás en el paraíso. A sus 2,665 metros
                 (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
@@ -213,7 +215,7 @@
                 y café del país, y que representa la mayoría de las
                 exportaciones de Burundi.
               </p>
-              <p class="place__paragraph">
+              <p class="places__paragraph">
                 El Parque nacional de Kibira, una de las mayores reservas de
                 vida silvestre para los simios, ocupa parte de cuatro
                 provincias, incluyendo Muramvya. Este parque nacional se
@@ -224,28 +226,28 @@
                 país.
               </p>
             </div>
-            <button class="place__button" type="button">
+            <button class="places__button" type="button">
               Compra esta obra como NFT
             </button>
           </div>
 
-          <div class="place__content">
-            <h2 class="place__title">Bogotá D.C., Colombia</h2>
-            <div class="place__website">
-              <p class="place__url-heading">Artista</p>
-              <p class="place__artist">
+          <div class="places__content">
+            <h2 class="places__title">Bogotá D.C., Colombia</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artista</p>
+              <p class="placess__artist">
                 Nataly Martinez, Estudiante de Desarrollado Web - TripleTen
               </p>
             </div>
-            <div class="place__images">
+            <div class="places__images">
               <img
                 src="./images/image_12.jpg"
                 alt="imagen de Bogotá D.C., Colombia"
-                class="place__image-12"
+                class="places__image-12"
               />
             </div>
-            <div class="place__paragraphs">
-              <p class="place__paragraph">
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
                 Bogotá, la capital de Colombia, es una ciudad vibrante y diversa
                 situada a más de 2.600 metros sobre el nivel del mar en el
                 altiplano andino, lo que la convierte en una de las capitales
@@ -255,7 +257,7 @@
                 rascacielos modernos con barrios históricos como La Candelaria,
                 donde se encuentran museos, iglesias y universidades.
               </p>
-              <p class="place__paragraph">
+              <p class="places__paragraph">
                 Además, la ciudad está rodeada por los cerros orientales, que
                 ofrecen espacios naturales como Monserrate y el cerro de
                 Guadalupe, ideales para apreciar vistas panorámicas. Bogotá
@@ -264,7 +266,7 @@
                 urbano y la innovación.
               </p>
             </div>
-            <button class="place__button" type="button">
+            <button class="places__button" type="button">
               Compra esta obra como NFT
             </button>
           </div>
