Ajuste de etiqueta - place cambia a places

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <img
                 src="./images/image_9.png"
                 alt="imagen del Cricieth en Gales"
-                class="place__image-9"
+                class="places__image-9"
               />
             </div>
             <div class="places__paragraphs">
@@ -156,7 +156,7 @@
               <img
                 src="./images/image_10.png"
                 alt="imagen de Berea, EE. UU."
-                class="place__image-10"
+                class="places__image-10"
               />
             </div>
             <div class="places__paragraphs">
@@ -194,7 +194,7 @@
               <img
                 src="./images/image_11.png"
                 alt="imagen de Muramvya, Burundi"
-                class="place__image-11"
+                class="places__image-11"
               />
             </div>
             <div class="places__paragraphs">
@@ -235,7 +235,7 @@
             <h2 class="places__title">Bogotá D.C., Colombia</h2>
             <div class="places__website">
               <p class="places__url-heading">Artista</p>
-              <p class="placess__artist">
+              <p class="places__artist">
                 Nataly Martinez, Estudiante de Desarrollado Web - TripleTen
               </p>
             </div>
